# maxxair-fan-pi-interface

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  ir.py  pyproject.toml  requirements-dev.txt
.github/workflows/: test.yml
config/examples/: hub-remote.json  multi-local.json
deploy/: maxxair-fan-agent.service  maxxair-fan.service
docs/: README.md  architecture.md  cli.md  configuration.md  development.md  firebase-schema.md  quickstart.md  topologies.md  troubleshooting.md
ir_codes/: fan_off.ir  fan_on_in_10.ir  fan_on_in_100.ir  fan_on_in_20.ir  fan_on_in_30.ir  fan_on_in_40.ir  fan_on_in_50.ir  fan_on_in_60.ir  fan_on_in_70.ir  fan_on_in_80.ir  fan_on_in_90.ir  fan_on_out_10.ir  fan_on_out_100.ir  fan_on_out_20.ir  fan_on_out_30.ir  fan_on_out_40.ir  fan_on_out_50.ir  fan_on_out_60.ir  fan_on_out_70.ir  fan_on_out_80.ir  fan_on_out_90.ir
maxxair_fan/: __init__.py  __main__.py  agent.py  cli.py  config.py  fan.py  fan_unit.py  fans_config.py  firebase.py  main.py  sensor.py
maxxair_fan/backends/: __init__.py  deduping_ir.py  fake_ir.py  fake_sensor.py  firebase_rest.py  in_memory_firebase.py  irctl.py  protocols.py  remote_agent.py  (+1 more)
scripts/: dev.sh  install.sh
tests/: conftest.py  test_agent_server.py  test_compute_speed.py  test_config.py  test_deduping_ir.py  test_fake_backends.py  test_fan.py  test_fan_unit.py  test_fans_config.py  test_firebase.py  test_main.py  test_multi_main.py  test_preflight.py  test_remote_agent_backend.py  test_send_ir_device.py  test_sensor.py  test_sensor_retry.py
(+22 files in other folders)
